--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	url = https://github.com/OpenNeuroDatasets/ds001178.git
 	datalad-id = 3ca43de6-875e-11e8-a61d-0242ac120010
 	datalad-url = https://github.com/OpenNeuroDatasets/ds001178.git
+[submodule "sourcedata/templateflow"]
+	path = sourcedata/templateflow
+	url = https://github.com/templateflow/templateflow.git
+	datalad-id = c79c47b6-d0fb-11e8-aa11-64006a8a730f
+	datalad-url = https://github.com/templateflow/templateflow.git
