[DATALAD] modified subdataset properties

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds001178.git
 	datalad-id = 3ca43de6-875e-11e8-a61d-0242ac120010
-	datalad-url = https://github.com/OpenNeuroDatasets/ds001178.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds001178
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
